...
        var statuses: [String] = []
        
        if isOwned {
            statuses.append("Owned") // Will be localized
        }
        if isWishlist {
            statuses.append("Wishlist") // Will be localized
        }
        if hasMissingParts {
            statuses.append("Missing Parts") // Will be localized
        }
        if isSealedBox {
            statuses.append("Sealed Box") // Will be localized
...
